Call auth.alumni57.ru to check code

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,4 @@ django-grappelli==2.9.1
 git+https://github.com/syrusakbary/pyjade#d8cf1d9404c759c6a2430c9a900874ab0e970cd8
 coffeescript
 git+https://github.com/dyve/django-bootstrap3#a90f6e089e8e427926f299b65f31663cd0c0bcff
+requests
